--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,7 @@
         app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
-        android:id="@+id/itemsTextView"
+        android:id="@+id/itemsList"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="24dp"
